added id and link breadcrumbs

--- a/types-of-vulnerabilities/phishing.html
+++ b/types-of-vulnerabilities/phishing.html
@@ -334,17 +334,17 @@
 		<div class="bg-gradient-to-b from-black to-[#141528] text-justify">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+					<h4 id="overview" class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
 					<p> Phishing is a kind of cyberattack in which attackers deceive the victim into sharing private information, including passwords, bank account information, or personal information. Emails, texts, phone calls, and social media interactions are the usual ways that these attacks take place. Phishing is an effective tactic for cybercriminals because it primarily takes advantage of human psychology rather than technological flaws. Phishing techniques have evolved over time, frequently imitating authentic communications nearly exactly. Attackers use urgency and trust to influence people to make bad choices, according to Proofpoint. </p>
 					<p> Phishing, which first appeared in the mid-1990s, has since developed into a number of specialized types, including spear phishing, smishing, vishing, and whaling. Using voice calls, emails, SMS, or even social engineering through executive impersonation, each variation targets victims in a unique way. The objective is always the same: tricking the user into jeopardizing security. The frequency and complexity of phishing attacks have only increased due to the widespread use of technology and remote communication. To combat this increasing threat, organizations today need to be proactive in educating users and implementing layered defenses. </p>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">How it Works</h4>
+					<h4 id="how-it-works" class="font-medium text-2xl text-[#E2C8F1]">How it Works</h4>
 					<p> Phishing is a type of cyberattack where criminals try to trick people into giving away personal information, like passwords or credit card numbers. They usually send fake emails or messages that look like they come from trusted sources, such as banks or social media platforms. These messages often contain links that lead to fake websites designed to steal your information. Sometimes, phishing emails create a sense of urgency, like saying your account will be locked if you don’t act quickly. Many people fall for phishing because the messages look very real and convincing. </p>
 					<p> Once a victim clicks on the fake link and enters their information, the attackers can use it to steal money or commit identity fraud. Some phishing scams even install malware on your computer without you knowing. This malware can spy on your activity or lock your files until you pay a ransom. Phishing doesn’t always come through email scammers also use text messages and phone calls. That’s why it’s important to be careful online and double-check any suspicious messages before clicking anything. </p>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Real World Examples</h4>
+					<h4 id="example" class="font-medium text-2xl text-[#E2C8F1]">Real World Examples</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-4">
 						<div class="">
 							<img src="../assets/dnc.webp" class="rounded shadow shadow-indigo-900/50 w-full h-64 object-cover" alt="Heartbleed Bug" />
@@ -379,7 +379,7 @@
 					</div>
 				</div>
 				<div class="text-white mt-8">
-					<h3 class="text-2xl font-medium text-[#E2C8F1] mb-3">Risks and Impacts</h3>
+					<h3 id="risk-impact" class="text-2xl font-medium text-[#E2C8F1] mb-3">Risks and Impacts</h3>
 					<div class="space-y-8 mt-8">
 						<div class="space-y-2">
 							<h5 class="text-xl font-medium">Financial Losses</h5>
