--- a/types-of-vulnerabilities/ransomware.html
+++ b/types-of-vulnerabilities/ransomware.html
@@ -334,17 +334,17 @@
 		<div class="bg-gradient-to-b from-black to-[#141528] text-justify">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+					<h4 id="overview" class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
 					<p> Malicious software known as ransomware encrypts a victim's data and prevents access to it until the attacker is paid a ransom. Targeting both individuals and government organizations, this type of cyberattack has grown in frequency. Because ransomware generates billions of dollars in illicit gains, cybercriminals have substantial financial incentives. In addition to financial losses, victims frequently experience reputational harm and business interruptions. It's more important than ever to comprehend and counteract ransomware as its tactics change. </p>
 					<p> Because Ransomware-as-a-Service (RaaS) has become more popular, cybercriminals can now launch attacks even if they lack technical expertise. By offering pre-made ransomware tools, these services facilitate the targeting of victims in a variety of industries. In order to obtain access, attackers frequently take advantage of system flaws or employ social engineering strategies. Once inside, they can encrypt information and request payment, frequently in cryptocurrency, to decrypt it. These tools are widely accessible, which has led to an increase in ransomware cases worldwide. </p>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">How it Works</h4>
+					<h4 id="how-it-works" class="font-medium text-2xl text-[#E2C8F1]">How it Works</h4>
 					<p> Ransomware uses asymmetric encryption, which uses two keys—one public and one private—to encrypt important data after breaking into a system. It is nearly impossible for victims to decrypt their files without paying the ransom because the attacker keeps the private key. Phishing emails, malicious downloads, and taking advantage of system flaws are common ways of distr ibution. The ransomware essentially locks users out of their own data by searching the system for particular file types to encrypt after it has been activated. A ransom note is then given to the victims, frequently requesting payment within a predetermined window of time in order to prevent irreversible data loss. </p>
 					<p> Attackers may employ complex strategies to increase their impact in real-world situations. Some ransomware variants, for example, are made to propagate laterally across networks, infecting numerous systems and expanding the attack's reach. Others might use double extortion, in which the attackers encrypt data and threaten to release private information if the ransom isn't paid. These tactics put more pressure on victims to abide by requests. Ransomware attacks are a persistent and changing threat due to their versatility and complexity. </p>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Real World Examples</h4>
+					<h4 id="example" class="font-medium text-2xl text-[#E2C8F1]">Real World Examples</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-4">
 						<div class="">
 							<img src="../assets/colonial-pipeline.jpg" class="rounded shadow shadow-indigo-900/50 w-full h-64 object-cover" alt="Heartbleed Bug" />
@@ -379,7 +379,7 @@
 					</div>
 				</div>
 				<div class="text-white mt-8">
-					<h3 class="text-2xl font-medium text-[#E2C8F1] mb-3">Risks and Impacts</h3>
+					<h3 id="risk-impact" class="text-2xl font-medium text-[#E2C8F1] mb-3">Risks and Impacts</h3>
 					<div class="space-y-8 mt-8">
 						<div class="space-y-2">
 							<h5 class="text-xl font-medium">Operational Disruption</h5>
