--- a/types-of-vulnerabilities/software-bugs.html
+++ b/types-of-vulnerabilities/software-bugs.html
@@ -334,17 +334,17 @@
 		<div class="bg-gradient-to-b from-black to-[#141528] text-justify">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+					<h4 id="overview" class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
 					<p> Software bugs are inadvertent defects or mistakes in computer programs that lead to unexpected behavior, crashes, or inaccurate output. Usually, these problems result from errors made in the software development process during the design, coding, or testing stages. Logic errors, syntax errors, and integration problems are common bug types that can jeopardize the dependability and functionality of software applications. SonarSource claims that these bugs frequently arise from coding mistakes that cause unexpected runtime behavior. Since these bugs have the potential to cause serious operational disruptions and security vulnerabilities, fixing them is essential. </p>
 					<p> Besides just being technical issues, software bugs can have a significant negative impact on an organization's finances and reputation. For example, millions of users may be impacted by a small bug in a popular application, which could result in a decline in trust and possible legal ramifications. Furthermore, software defects can present significant safety hazards in vital systems like healthcare or aviation. To find and fix bugs early in the development cycle, it is crucial to implement strict testing and quality assurance procedures. SonarQube and other tools help developers identify and fix these problems quickly, guaranteeing the delivery of dependable and secure software. </p>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">How it Works</h4>
+					<h4 id="how-it-works" class="font-medium text-2xl text-[#E2C8F1]">How it Works</h4>
 					<p> Human error during the software development lifecycle is usually the source of software bugs. Misunderstandings of the requirements, improper logic implementation, or insufficient testing can all lead to these mistakes. Unexpected behavior or system failures may result from a bug that is dormant until it is triggered by particular conditions during runtime. By looking for patterns in the codebase that frequently result in errors, static code analysis tools like SonarQube assist in finding these bugs. Developers can avoid possible problems before the software goes into production by identifying bugs early. </p>
 					<p> Attackers frequently use software flaws to access systems or data without authorization. A buffer overflow bug, for instance, can compromise system security by enabling an attacker to run arbitrary code. Such flaws have been exploited in real-world situations to compromise systems, steal confidential data, or interfere with services. Because of the notorious Heartbleed flaw in the OpenSSL library, hackers were able to read protected memory and reveal private information. As a result, identifying and fixing software bugs affects both functionality and security. </p>
 				</div>
 				<div class="space-y-4">
-					<h4 class="font-medium text-2xl text-[#E2C8F1]">Real World Examples</h4>
+					<h4 id="example" class="font-medium text-2xl text-[#E2C8F1]">Real World Examples</h4>
 					<div class="grid md:grid-cols-3 grid-cols-1 gap-4">
 						<div class="">
                             <img src="../assets/heartbleed.webp" class="rounded shadow shadow-indigo-900/50 w-full h-64 object-cover" alt="Heartbleed Bug" />
@@ -381,7 +381,7 @@
 					</div>
 				</div>
 				<div class="text-white mt-8">
-					<h3 class="text-2xl font-medium text-[#E2C8F1] mb-3">Risks and Impacts</h3>
+					<h3 id="risk-impact" class="text-2xl font-medium text-[#E2C8F1] mb-3">Risks and Impacts</h3>
                     <div class="space-y-8 mt-8">
                         <div class="space-y-2">
                             <h5 class="text-xl font-medium">Financial Losses</h5>
