fixed responsive issues

--- a/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
+++ b/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
@@ -323,10 +323,16 @@
                     <a href="#" class="text-sm">History of Computer Vulnerabilities</a>
                 </div>
 				<h4 class="text-6xl font-medium text-center mt-24">History of Computer Vulnerabilities</h4>
-                <div class="flex block items-center md:space-x-4 mt-4 justify-center">
-                    <a href="#initial">Initial Discovery </a>
-                    <a href="#common">Common Early Exploits and Attacks</a>
-                    <a href="#development">The Development of Security Patching</a>
+                <div class="md:flex block items-center md:space-x-4 md:space-y-0 space-y-4 mt-4 justify-center">
+                    <div class="text-center">
+                        <a href="#initial">Initial Discovery </a>
+                    </div>
+                    <div class="text-center">
+                        <a href="#common">Common Early Exploits and Attacks</a>
+                    </div>
+                    <div class="text-center">
+                        <a href="#development">The Development of Security Patching</a>
+                    </div>
                 </div>
 			</div>
 		</div>
