fixed responsiveness issues

--- a/types-of-vulnerabilities/ransomware.html
+++ b/types-of-vulnerabilities/ransomware.html
@@ -323,11 +323,19 @@
                     <a href="#" class="text-sm">Ransomware</a>
                 </div>
 				<h4 class="text-6xl font-medium text-center mt-30">Ransomware</h4>
-                <div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="#overview">Overview</a>
-                    <a href="#how-it-works">How it Works </a>
-                    <a href="#example">Real World Examples</a>
-                    <a href="#risk-impact">Risks and Impacts</a>
+                <div class="md:flex block items-center md:space-x-4 md:space-y-0 space-y-4 mt-4 justify-center">
+                    <div class="text-center">
+                        <a href="#overview">Overview </a>
+                    </div>
+                    <div class="text-center">
+                        <a href="#how-it-works">How it Works</a>
+                    </div>
+                    <div class="text-center">
+                        <a href="#example">Real World Examples</a>
+                    </div>
+                    <div class="text-center">
+                        <a href="#risk-impact">Risk and Impacts</a>
+                    </div>
                 </div>
 			</div>
 		</div>
