--- a/types-of-vulnerabilities/insider-threat.html
+++ b/types-of-vulnerabilities/insider-threat.html
@@ -324,11 +324,19 @@
                     <a href="#" class="text-sm">Insider Threat</a>
                 </div>
 				<h4 class="text-6xl font-medium text-center mt-30">Insider Threat</h4>
-                <div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="#overview">Overview</a>
-                    <a href="#how-it-works">How it Works </a>
-                    <a href="#example">Real World Examples</a>
-                    <a href="#risk-impact">Risks and Impacts</a>
+                <div class="md:flex block items-center md:space-x-4 md:space-y-0 space-y-4 mt-4 justify-center">
+                    <div class="text-center">
+                        <a href="#overview">Overview </a>
+                    </div>
+                    <div class="text-center">
+                        <a href="#how-it-works">How it Works</a>
+                    </div>
+                    <div class="text-center">
+                        <a href="#example">Real World Examples</a>
+                    </div>
+                    <div class="text-center">
+                        <a href="#risk-impact">Risk and Impacts</a>
+                    </div>
                 </div>
 			</div>
 		</div>
@@ -400,7 +408,7 @@
         <div class="text-white mt-8">
             <h3 id="risk-impact" class="text-2xl font-medium text-[#E2C8F1] mb-3">Risks and Impacts</h3>
         
-        <div class="space-y-8 mt-8">
+        <div class="space-y-8 mt-8 text-left">
             <div class="space-y-2">
                 <h5 class="text-xl font-medium">Data Breaches and Intellectual Property Theft</h5>
                 <p>
@@ -435,7 +443,7 @@
         </div>
         <!-- REFERENCES ACCORDION -->
         <div>
-            <details class="rounded border shadow border-indigo-900" open>
+            <details class="rounded border shadow border-indigo-900 text-left" open>
                 <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
                 References
                 </summary>
