--- a/famous-cyber-attacks/i-love-you-virus.html
+++ b/famous-cyber-attacks/i-love-you-virus.html
@@ -350,7 +350,7 @@
                 </div>
                 <div class="space-y-4">
                     <h4 id="impact-and-consequences" class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
-                    <div class="grid grid-cols-2 gap-4">
+                    <div class="grid md:grid-cols-2 grid-cols-1 gap-4">
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
                             <p>Government offices, including the Pentagon and British Parliament, were forced to shut down email systems. Critical communications were disrupted for days as a result of the virus. The operational downtime cost millions in lost productivity.</p>
